# marmot-protocol-whitenoise

./: .fvm  .gitignore  AGENTS.md  CHANGELOG.md  analysis_options.yaml  justfile  pubspec.yaml  zapstore.yaml
.github/: apk-contributors
.github/workflows/: android-apk.yml  ci.yml  deploy-when-apk.yml
ios/: Podfile
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  routes.dart
lib/hooks/: use_active_chat.dart  use_app_logs.dart  use_chat_input.dart  use_chat_list.dart  use_chat_messages.dart  use_chat_profile.dart  use_create_group.dart  use_delete_all_data.dart  use_dropdown_controller.dart  use_edit_group.dart  use_edit_profile.dart  use_group_members.dart  use_groups.dart  use_key_packages.dart  use_media_upload.dart  use_network_relays.dart  use_relay_input.dart  use_relay_resolution.dart  use_start_dm.dart  use_support_chat.dart  use_user_has_key_package.dart  use_user_metadata.dart  use_user_search.dart
lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_it.arb  app_pt.arb  app_ru.arb  app_tr.arb
lib/providers/: app_log_filter_provider.dart  app_log_provider.dart  app_version_provider.dart  auth_provider.dart  debug_view_provider.dart  message_debug_log_provider.dart  notification_provider.dart  rust_log_listener_provider.dart
lib/screens/: add_profile_screen.dart  add_to_group_screen.dart  app_logs_screen.dart  appearance_screen.dart  chat_info_screen.dart  chat_invite_screen.dart  chat_raw_debug_screen.dart  chat_screen.dart  debug_sql_query_screen.dart  developer_settings_screen.dart  donate_screen.dart  edit_group_screen.dart  edit_profile_screen.dart  group_info_screen.dart  group_member_screen.dart  home_screen.dart  key_package_management_screen.dart  login_screen.dart  message_actions_screen.dart  network_screen.dart  privacy_security_screen.dart  profile_keys_screen.dart  relay_control_state_screen.dart  relay_resolution_screen.dart  report_bug_screen.dart  scan_npub_screen.dart  scan_nsec_screen.dart  set_up_group_screen.dart  settings_screen.dart  share_profile_screen.dart  sign_out_screen.dart  signup_screen.dart  start_chat_screen.dart  start_support_chat_screen.dart  switch_profile_screen.dart  user_search_screen.dart  user_selection_screen.dart
lib/services/: message_service.dart  user_service.dart
lib/theme/: semantic_colors.dart
lib/utils/: app_flavor.dart  bubble_grouping.dart  chat_messages_search.dart  logging.dart
lib/widgets/: chat_list_header.dart  chat_list_tile.dart  chat_message_bubble.dart  chat_message_media.dart  chat_message_quote.dart  debug_info_pill.dart  debug_key_value_row.dart  debug_query_result_table.dart  debug_section_card.dart  (+30 more)
reviews/: PR-517-start-chat-flow-improvements.md
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: account_groups.rs  bug_report.rs  chat_list.rs  error.rs  groups.rs  logs.rs  media_files.rs  messages.rs  mod.rs  relays.rs  signer.rs  users.rs  utils.rs
scripts/: build_openssl_android.sh  build_release.sh  check-coverage.sh  when-apk.sh
test/: main_test.dart  routes_test.dart
(+140 files in other folders)
