[package]
name = "rust_lib_whitenoise"
version = "0.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.40", features = ["serde"] }
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
hex = "0.4"
mdk-core = { version = "0.7.1", git = "https://github.com/marmot-protocol/mdk", rev = "ca0663ee332958aa92efadf916d19c6e1b1f99c7", features = [
    "mip04",
] }
nostr-sdk = { version = "0.44", features = [
    "nip04",
    "nip44",
    "nip47",
    "nip59",
] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }
tracing = "0.1"
url = "2.5.1"
whitenoise = { version = "0.2.1", git = "https://github.com/marmot-protocol/whitenoise-rs", rev = "8a4ee4c427cc65b6b9e7cfb9837d9ed15e7fabea" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
